--- a/package.json
+++ b/package.json
@@ -7,13 +7,21 @@
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.26.1",
+    "filepond": "^4.30.3",
+    "filepond-plugin-file-encode": "^2.1.10",
+    "filepond-plugin-file-validate-type": "^1.2.7",
+    "filepond-plugin-image-exif-orientation": "^1.0.11",
+    "filepond-plugin-image-preview": "^4.6.11",
     "formik": "^2.2.9",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-filepond": "^7.1.1",
+    "react-filerobot-image-editor": "^4.2.0",
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
     "sweetalert2": "^11.4.8",
     "sweetalert2-react-content": "^5.0.0",
+    "use-debounce": "^8.0.1",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
   },
